# TCAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_openai.py
categorization/api/: serializers.py  urls.py  views.py
categorization/llm/: base_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
categorization/services/: categorization_service.py  context_builder.py  prompt_builder.py  response_parser.py
config/: settings.py  urls.py
sample_data/: expected_outputs.json  sample_transactions.json
